@startuml

title __CONTROL's Class Diagram__\n

  package control {
    class DungeonController {
        - heroes : HashMap<Hero, Position>
        - mobs : HashMap<Character, Position>
        - visibleTiles : boolean[][]
        - init()
        + DungeonController()
        + printVisibleTiles()
        - spawnMobs()
        + updateVisibleTiles()
        - heroAtBorder()
        - setVisible()
        - containsHeroes()
        - containedHeroes()
        - getTilePos()
        + generateCharacterLayout()
        - spawnHeroes()
        - findFirstFreeSquare()
        - isFree()
        - getHero()
        - findStartingTerrain()
    }
  }
  

  package control {
    enum Border {
      NORTH
      NORTHEAST
      EAST
      SOUTHEAST
      SOUTH
      SOUTHWEST
      WEST
      NORTHWEST
      NONE
      xDelta
      yDelta
    }
  }
  

  package control {
    class TombOfPik8 {
        {static} + main()
    }
  }
  

  package control {
    class WorldController {
        - init()
        + WorldController()
    }
  }
  

  DungeonController o-- Dungeon : dungeon
  DungeonController +-down- Border
  WorldController o-- Overworld : overworld


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
